[metadata]
name = convml_data
author = Leif denby
author_email = l.c.denby@leeds.ac.uk
license = Apache
description = Dataset creation for neural network classification of clouds
long_description_content_type = text/markdown
long_description = file: README.md

url = https://github.com/convml/convml_data
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    xarray
    netCDF4
    matplotlib
    parse
    coloredlogs
    luigi
    isodate
    cloudmetrics
    metpy
    eurec4a-environment @ git+https://github.com/eurec4a/eurec4a-environment#egg=eurec4a-environment

setup_requires =
    setuptools >= 40.4
    setuptools_scm


[options.extras_require]
sattiles =
    cartopy
    satpy
    esmpy
    xesmf
    regridcart>=0.1.0
    satdata>=0.2.4
    pyspectral
    rioxarray
    tinynetrc
    h5py
    pyhdf

dev =
    ipdb
    pylint
    flake8
    isort
    pytest
    pre-commit


[tool:pytest]
python_files = test_*.py
testpaths = tests

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    E741 # ambigious name
    C901 # function is too complex
exclude=
    .eggs
    doc

extend-ignore = E203, E266, E501
# line length is intentionally set to 80 here because black uses Bugbear
# See https://github.com/psf/black/blob/master/docs/the_black_code_style.md#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
per-file-ignores = __init__.py:F401

[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = convml_data

[aliases]
test = pytest

[pytest-watch]
nobeep = True

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = convml_data/_version.py
versionfile_build = convml_data/_version.py
tag_prefix =
